// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Satellite config should apply an inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_category, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "value": "lorem ipsum",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_category, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"Satellite Server"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/XXXX-XXXX-XXXXX-XXXXX/"
        isInline={true}
        variant="link"
      >
        lorem ipsum
      </Button>,
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_category, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "value": 200,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"Satellite Server"})",
      "value": "XXXX-XXXX-XXXXX-XXXXX",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
  },
}
`;

exports[`Product Satellite config should apply an inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem ipsum",
    },
    {
      "title": "--",
    },
    {
      "title": <React.Fragment>
        t(curiosity-inventory.label, {"context":"category"})
         
        <Label
          color="purple"
        >
          t(curiosity-inventory.label_cloud_provider, {"context":"dolor sit"})
        </Label>
      </React.Fragment>,
    },
    {
      "title": 200,
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_number_of_guests, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_category, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "Sockets": {
      "title": "t(curiosity-inventory.header_Sockets, {"context":"Satellite Server"})",
      "value": 200,
    },
    "cloud_provider": {
      "title": "t(curiosity-inventory.header_cloud_provider, {"context":"Satellite Server"})",
      "value": "dolor sit",
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"Satellite Server"})",
      "value": "lorem ipsum",
    },
    "instance_id": {
      "title": "t(curiosity-inventory.header_instance_id, {"context":"Satellite Server"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"Satellite Server"})",
      "value": null,
    },
  },
}
`;

exports[`Product Satellite config should apply graph configuration: filters 1`] = `
{
  "filtersSettings": [
    {
      "settings": {
        "actions": [
          {
            "id": "granularity",
            "position": "right",
          },
        ],
        "color": "#06c",
        "fill": "#8bc1f7",
        "groupMetric": [
          "Sockets",
        ],
        "isDisabledLegendClick": true,
        "isMetricDisplay": false,
        "isMultiMetric": true,
        "isStandalone": undefined,
        "metric": undefined,
        "metrics": [
          {
            "chartType": "area",
            "color": "#06c",
            "fill": "#8bc1f7",
            "id": "Sockets_physical",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "physical",
            },
            "stroke": "#06c",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#009596",
            "fill": "#a2d9d9",
            "id": "Sockets_virtual",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "virtual",
            },
            "stroke": "#009596",
            "strokeWidth": 2,
          },
          {
            "chartType": "area",
            "color": "#5752d1",
            "fill": "#b2b0ea",
            "id": "Sockets_cloud",
            "isCapacity": false,
            "isStacked": true,
            "isThreshold": false,
            "isToolbarFilter": true,
            "metric": "Sockets",
            "query": {
              "category": "cloud",
            },
            "stroke": "#5752d1",
            "strokeWidth": 2,
          },
        ],
        "padding": {
          "bottom": 75,
          "left": 75,
          "right": 45,
          "top": 45,
        },
        "query": {
          "category": "physical",
        },
        "stringId": "Sockets_physical",
        "stroke": "#06c",
      },
    },
  ],
}
`;

exports[`Product Satellite config should apply graph configuration: settings 1`] = `
{
  "actions": [
    {
      "id": "granularity",
      "position": "right",
    },
  ],
  "isDisabledLegendClick": true,
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, NOT authorized 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, authorized 1`] = `
{
  "cells": [
    {
      "title": <Button
        component="a"
        href="/insights/inventory/lorem inventory id/"
        isInline={true}
        variant="link"
      >
        lorem
      </Button>,
    },
    {
      "title": "lorem inventory id",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "lorem inventory id",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply guest inventory configuration: filtered, missing inventory id 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header, {"context":"guestsDisplayName"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "displayName": {
      "title": "t(curiosity-inventory.header, {"context":"displayName"})",
      "value": "lorem",
    },
    "inventoryId": {
      "title": "t(curiosity-inventory.header, {"context":"inventoryId"})",
      "value": "",
    },
    "lastSeen": {
      "title": "t(curiosity-inventory.header, {"context":"lastSeen"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header, {"context":"loremIpsum"})",
      "value": "hello world",
    },
    "subscriptionManagerId": {
      "title": "t(curiosity-inventory.header, {"context":"subscriptionManagerId"})",
      "value": "lorem subscription id",
    },
  },
}
`;

exports[`Product Satellite config should apply toolbar configuration: filters 1`] = `
[
  {
    "id": "sla",
  },
  {
    "id": "usage",
    "selected": true,
  },
  {
    "id": "category",
  },
]
`;
